--- a/_posts/2020-02-26-kesan.md
+++ b/_posts/2020-02-26-kesan.md
@@ -1,22 +1,10 @@
 ---
-title: "Edge Case: Many Categories"
+title: "Kesan"
 categories:
-  - aciform
-  - antiquarianism
-  - arrangement
-  - asmodeus
-  - broder
-  - buying
-  - championship
-  - chastening
-  - disinclination
-  - disinfection
-  - dispatch
-  - echappee
-  - enphagy
-tags:
-  - categories
-  - edge case
+-Kesan
+ 
+ tags:
+  - tugas
 ---
 
-This post has many categories.
+Kesan saya selama mengikuti pembelajaran proyek adalah kita seperti membuka jendela baru di dunia programming. Dimulai dari latihan mengetik sepuluh jari, merambah excel dan word serta power point, mencoba github, web design, hingga sekarang mencoba membuat blog pribadi.
